<resources>
    <string name="app_name">Final project</string>
    <string name="hi">Пожалуйста, выберите</string>
    <string name="bu">Регистрация</string>
    <string name="pp">Вход</string>
    <string name="ii">Искусство</string>
    <string name="ппп">Регистрация</string>
    <string name="bvv">Войти</string>
    <string name="email">Email</string>
    <string name="code">Code</string>
    <string name="name">Name</string>
    <string name="дождь">Далее</string>
    <string name="todo">TODO</string>
    <string name="my_hobby">My hobby</string>
    <string name="jjjj">продолжить</string>
    <string name="rednoise">RedNoise</string>
    <string name="jonnyg">JonnyG</string>
    <string name="sasha">Sasha</string>
    <string name="geovani">Geovani</string>
    <string name="hellokitty">HelloKitty</string>
    <string name="noname">Noname</string>
    <string name="dd">Танцы</string>
    <string name="uuu">Музыка</string>
    <string name="ssss">Шахматы</string>
    <string name="arti">Искусство</string>
    <string name="food">Готовка</string>
    <string name="maliadante">MaliaDante</string>
    <string name="step">Уровень:4</string>
    <string name="step1">Уровень:7</string>
    <string name="tttt">Недавно просмотренные</string>
    <string name="ooo">Подписаться</string>
    <string name="you">Ютьюб</string>
    <string name="cait">Сайты</string>
    <string name="book">Книги</string>
    <string name="online">Онлайн-уроки</string>
    <string name="step5">Уровень:5</string>
    <string name="nast">Настройки</string>
    <string name="vyhod">Выход</string>
    <string name="otp">Отписки</string>
    <string name="acc">Сменить аккаунт</string>
    <string name="color">Цвет</string>
</resources>