<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F5E3FE">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginTop="196dp"
        android:text="@string/pp"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/CardView1"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:backgroundTint="#03A900"
        app:cardCornerRadius="20dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="627dp">

        <Button
            android:layout_width="200dp"
            android:layout_height="65dp"
            android:backgroundTint="#03A900"
            android:text="@string/дождь" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="371dp"
        android:layout_height="87dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/photo1639046737__7_"
        android:contentDescription="@string/todo"/>

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="371dp"
        android:layout_height="87dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="240dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/photo1639046737__7_"
        android:contentDescription="@string/todo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="272dp"
        android:text="@string/name"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="384dp"
        android:text="@string/code"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>