<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CAE8F9">

    <Button
        android:id="@+id/button6"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="504dp"
        android:backgroundTint="#E1E1E1"
        android:text="@string/ooo"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="392dp"
        android:text="@string/you"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="284dp"
        android:text="@string/cait"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="172dp"
        android:text="@string/book"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="60dp"
        android:text="@string/online"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView25"
        android:layout_width="411dp"
        android:layout_height="244dp"
        android:layout_marginBottom="536dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/photo1639048683__4_"
        android:contentDescription="@string/todo"/>

    <ImageView
        android:id="@+id/imageView26"
        android:layout_width="192dp"
        android:layout_height="101dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="368dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/photo1639048683__5_"
        android:contentDescription="@string/todo"/>

    <ImageView
        android:id="@+id/imageView27"
        android:layout_width="195dp"
        android:layout_height="124dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="236dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/photo1639048683__6_"
        android:contentDescription="@string/todo"/>

    <ImageView
        android:id="@+id/imageView28"
        android:layout_width="197dp"
        android:layout_height="102dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="132dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/photo1639048683__7_"
        android:contentDescription="@string/todo"/>

    <ImageView
        android:id="@+id/imageView29"
        android:layout_width="195dp"
        android:layout_height="124dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/photo1639048683__6_"
        android:contentDescription="@string/todo"/>
</androidx.constraintlayout.widget.ConstraintLayout>