<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5E3FE"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="184dp"
        android:text="@string/hi"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardBackgroundColor="#287264"
        app:cardCornerRadius="580dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="315dp">

        <Button
            android:id="@+id/button1"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:backgroundTint="#287264"
            android:text="@string/ппп"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardBackgroundColor="#8E69AC"
        app:cardCornerRadius="580dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="223dp"
        tools:layout_editor_absoluteY="315dp">

        <Button
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:backgroundTint="#8E69AC"
            android:text="@string/bvv"/>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>