<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CAE8F9">


    <Button
        android:layout_width="400dp"
        android:layout_height="12dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="68dp"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button

        android:id="@+id/button"

        android:layout_width="1dp"
        android:layout_height="70dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#FFFFFF"
        android:verticalScrollbarPosition="left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:layout_width="1dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="128dp"
        android:backgroundTint="#FFFFFF"
        android:verticalScrollbarPosition="left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="352dp"
        android:text="@string/rednoise"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="152dp"
        android:text="@string/jonnyg"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="252dp"
        android:text="@string/sasha"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="448dp"
        android:text="@string/geovani"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="552dp"
        android:text="@string/hellokitty"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginBottom="60dp"
        android:text="@string/noname"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="256dp"
        android:text="@string/dd"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="332dp"
        android:layout_marginTop="248dp"
        android:text="@string/uuu"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="316dp"
        android:layout_marginTop="348dp"
        android:text="@string/ssss"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="308dp"
        android:layout_marginBottom="60dp"
        android:text="@string/uuu"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="308dp"
        android:layout_marginTop="548dp"
        android:text="@string/arti"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="12dp"
        android:text="@string/food"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="400dp"
        android:layout_height="12dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="200dp"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="400dp"
        android:layout_height="12dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="300dp"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="400dp"
        android:layout_height="12dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="404dp"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="400dp"
        android:layout_height="12dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="500dp"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="400dp"
        android:layout_height="12dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="116dp"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:layout_width="400dp"
        android:layout_height="12dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/photo1639046737__1_"
        android:contentDescription="@string/todo"/>

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="44dp"
        android:layout_height="42dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/photo1639046737__3_"
        android:contentDescription="@string/todo"/>

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="61dp"
        android:layout_height="42dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/photo1639046737__5_"
        android:contentDescription="@string/todo"/>

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="41dp"
        android:layout_height="45dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="140dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/photo1639048683"
        android:contentDescription="@string/todo"/>

    <ImageView
        android:id="@+id/imageView38"
        android:layout_width="45dp"
        android:layout_height="43dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="240dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/photo1639304170__5_"
        android:contentDescription="@string/todo"/>

    <ImageView
        android:id="@+id/imageView39"
        android:layout_width="45dp"
        android:layout_height="43dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="344dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/photo1639304170__5_"
        android:contentDescription="@string/todo"/>

    <ImageView
        android:id="@+id/imageView40"
        android:layout_width="45dp"
        android:layout_height="43dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="440dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/photo1639304170__5_"
        android:contentDescription="@string/todo"/>

    <ImageView
        android:id="@+id/imageView41"
        android:layout_width="45dp"
        android:layout_height="43dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="52dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/photo1639304170__5_"
        android:contentDescription="@string/todo"/>

    <ImageView
        android:id="@+id/imageView42"
        android:layout_width="53dp"
        android:layout_height="49dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="540dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/photo1639304170__6_"
        android:contentDescription="@string/todo"/>


</androidx.constraintlayout.widget.ConstraintLayout>