<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CAE8F9">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="32dp"
        android:text="@string/nast"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="112dp"
        android:text="@string/vyhod"
        android:textColor="#5E5151"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="208dp"
        android:text="@string/acc"
        android:textColor="#5E5151"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="408dp"
        android:text="@string/color"
        android:textColor="#5E5151"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="300dp"
        android:text="@string/otp"
        android:textColor="#5E5151"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:layout_width="400dp"
        android:layout_height="12dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="68dp"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="370dp"
        android:layout_height="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="160dp"
        android:backgroundTint="#0B0A0A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="370dp"
        android:layout_height="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="256dp"
        android:backgroundTint="#0B0A0A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="370dp"
        android:layout_height="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="376dp"
        android:backgroundTint="#0B0A0A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:layout_width="370dp"
        android:layout_height="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="284dp"
        android:backgroundTint="#0B0A0A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="41dp"
        android:layout_height="30dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/photo1639046737__8_"
        android:contentDescription="@string/todo"/>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="41dp"
        android:layout_height="30dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="112dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/photo1639046737__8_"
        android:contentDescription="@string/todo"/>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="41dp"
        android:layout_height="30dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="208dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/photo1639046737__8_"
        android:contentDescription="@string/todo"/>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="41dp"
        android:layout_height="30dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="408dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/photo1639046737__8_"
        android:contentDescription="@string/todo"/>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="41dp"
        android:layout_height="30dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="296dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/photo1639046737__8_"
        android:contentDescription="@string/todo"/>


</androidx.constraintlayout.widget.ConstraintLayout>